<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/connect"
        android:orderInCategory="0"
        android:title="@string/connect_text"/>
    <item
        android:id="@+id/disconnect"
        android:orderInCategory="1"
        android:title="@string/disconnect_text"/>
    <item
        android:id="@+id/testNotification"
        android:orderInCategory="2"
        android:title="@string/test_notif_btn"/>

    <item
        android:id="@+id/connectIcon"
        android:icon="@drawable/bt_nc"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title=""/>
</menu>
