
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView" >
<GridLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.utk.biodynamics.icloudecg.AnalysisResults"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Abnormality Detected in Your ECG"
            android:id="@+id/alert_title"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:textColor="#ec520d"
            android:textStyle="bold" />

    <TextView
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/analysisTimeText"
        android:id="@+id/analysisTimeLabel"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_columnSpan="1"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="2015-01-01 12:00"
        android:id="@+id/analysisTimeTV"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/analysisHRText"
        android:id="@+id/analysisHRLabel"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_columnSpan="1"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="_____ BPM"
        android:id="@+id/analysisHRTV"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Detected: Atrial Fibrillation"
        android:id="@+id/abnormality_title"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:textColor="#ec520d"
        android:textStyle="bold"
        android:layout_marginTop="40dp" />

    <TextView android:text="@string/analysis_results" android:layout_width="match_parent"
        android:layout_height="233dp"
        android:id="@+id/alert_message"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/abc_text_size_medium_material" />


</GridLayout>


</ScrollView>